feat: complete multi-language integration verification
- Verified and fixed Java 8 compatibility for Notification Service
- Fixed C# project structure and build errors
- Verified C++ compilation with GCC
- Verified Node.js API Gateway (port 3000)
- Updated Testing Guide with verified commands
- Updated Walkthrough with final test results