@@ -1,7 +1,6 @@
 package com.thepowerhouse.backend.notifications;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.logging.Level;
@@ -9,23 +8,47 @@ import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 /**
- * Advanced Notification Service - Production-Grade Java
- * Demonstrates: Spring-style DI, Multithreading, Streams API, Java 17+ features
- * 
- * Modern Java Features:
- * - Records (Java 14+)
- * - Sealed classes (Java 17+)
- * - Pattern matching
- * - ExecutorService for concurrent processing
- * - Stream API for functional programming
+ * Advanced Notification Service - Java 8+ Compatible
+ * Demonstrates: Concurrency, Streams API, Design Patterns, Best Practices
  */
 
-// Record for immutable notification data (Java 14+ feature)
-record NotificationMessage(String recipient,String subject,String body,Priority priority,LocalDateTime timestamp){
-// Compact constructor with validation
-public NotificationMessage{Objects.requireNonNull(recipient,"Recipient cannot be null");Objects.requireNonNull(body,"Message body cannot be null");if(timestamp==null){timestamp=LocalDateTime.now();}}}
+// Immutable notification message
+class NotificationMessage {
+    private final String recipient;
+    private final String subject;
+    private final String body;
+    private final Priority priority;
+    private final LocalDateTime timestamp;
 
-// Enum for priority levels
+    public NotificationMessage(String recipient, String subject, String body, Priority priority) {
+        this.recipient = Objects.requireNonNull(recipient, "Recipient cannot be null");
+        this.subject = subject;
+        this.body = Objects.requireNonNull(body, "Message body cannot be null");
+        this.priority = priority;
+        this.timestamp = LocalDateTime.now();
+    }
+
+    public String getRecipient() {
+        return recipient;
+    }
+
+    public String getSubject() {
+        return subject;
+    }
+
+    public String getBody() {
+        return body;
+    }
+
+    public Priority getPriority() {
+        return priority;
+    }
+
+    public LocalDateTime getTimestamp() {
+        return timestamp;
+    }
+}
+
 enum Priority {
     LOW(1), MEDIUM(2), HIGH(3), URGENT(4);
 
@@ -40,31 +63,27 @@ enum Priority {
     }
 }
 
-// Sealed interface for notification channels (Java 17+ feature)
-sealed
-
-interface NotificationChannel
-permits EmailChannel, SmsChannel, PushChannel
-{
-
+interface NotificationChannel {
     CompletableFuture<Boolean> send(NotificationMessage message);
 
     String getChannelName();
 }
 
-// Email channel implementation
-final class EmailChannel implements NotificationChannel {
+class EmailChannel implements NotificationChannel {
     private static final Logger LOGGER = Logger.getLogger(EmailChannel.class.getName());
 
     @Override
     public CompletableFuture<Boolean> send(NotificationMessage message) {
         return CompletableFuture.supplyAsync(() -> {
-            LOGGER.info(() -> String.format(
-                    "Sending EMAIL to %s: %s",
-                    message.recipient(),
-                    message.subject()));
-            // Simulate email sending delay
-            simulateNetworkDelay();
+            LOGGER.info(String.format(
+                    "[EMAIL] To: %s | Subject: %s",
+                    message.getRecipient(),
+                    message.getSubject()));
+            try {
+                Thread.sleep(100);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
             return true;
         });
     }
@@ -73,27 +92,16 @@ final class EmailChannel implements NotificationChannel {
     public String getChannelName() {
         return "EMAIL";
     }
-
-    private void simulateNetworkDelay() {
-        try {
-            Thread.sleep(100);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        }
-    }
 }
 
-// SMS channel implementation
-final class SmsChannel implements NotificationChannel {
+class SmsChannel implements NotificationChannel {
     private static final Logger LOGGER = Logger.getLogger(SmsChannel.class.getName());
 
     @Override
     public CompletableFuture<Boolean> send(NotificationMessage message) {
         return CompletableFuture.supplyAsync(() -> {
-            LOGGER.info(() -> String.format(
-                    "Sending SMS to %s: %s",
-                    message.recipient(),
-                    message.body()));
+            LOGGER.info(String.format("[SMS] To: %s | Message: %s",
+                    message.getRecipient(), message.getBody()));
             return true;
         });
     }
@@ -104,16 +112,13 @@ final class SmsChannel implements NotificationChannel {
     }
 }
 
-// Push notification channel
-final class PushChannel implements NotificationChannel {
+class PushChannel implements NotificationChannel {
     private static final Logger LOGGER = Logger.getLogger(PushChannel.class.getName());
 
     @Override
     public CompletableFuture<Boolean> send(NotificationMessage message) {
         return CompletableFuture.supplyAsync(() -> {
-            LOGGER.info(() -> String.format(
-                    "Sending PUSH to %s",
-                    message.recipient()));
+            LOGGER.info(String.format("[PUSH] To: %s", message.getRecipient()));
             return true;
         });
     }
@@ -124,10 +129,6 @@ final class PushChannel implements NotificationChannel {
     }
 }
 
-/**
- * Advanced notification service with dependency injection pattern,
- * concurrent processing, and modern Java features.
- */
 public class AdvancedNotificationService {
     private static final Logger LOGGER = Logger.getLogger(AdvancedNotificationService.class.getName());
 
@@ -136,40 +137,24 @@ public class AdvancedNotificationService {
     private final BlockingQueue<NotificationMessage> messageQueue;
     private final Map<String, Integer> deliveryStats;
 
-    /**
-     * Constructor with dependency injection pattern.
-     * Demonstrates: DI, Concurrent collections, ExecutorService
-     */
     public AdvancedNotificationService(List<NotificationChannel> channels) {
         this.channels = Objects.requireNonNull(channels, "Channels cannot be null");
-        this.executorService = Executors.newFixedThreadPool(
-                Runtime.getRuntime().availableProcessors());
+        this.executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
         this.messageQueue = new LinkedBlockingQueue<>();
         this.deliveryStats = new ConcurrentHashMap<>();
 
-        LOGGER.info(() -> String.format(
-                "Initialized AdvancedNotificationService with %d channels",
-                channels.size()));
+        LOGGER.info(String.format("✓ Initialized with %d channels", channels.size()));
     }
 
-    /**
-     * Queue a notification message.
-     * Demonstrates: Thread-safe queue operations
-     */
     public void queueMessage(NotificationMessage message) {
         try {
             messageQueue.put(message);
-            LOGGER.fine(() -> "Message queued: " + message.recipient());
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
             LOGGER.log(Level.SEVERE, "Failed to queue message", e);
         }
     }
 
-    /**
-     * Process all queued messages concurrently.
-     * Demonstrates: Stream API, CompletableFuture, Method references
-     */
     public void processQueue() {
         if (messageQueue.isEmpty()) {
             LOGGER.info("No messages to process.");
@@ -179,79 +164,51 @@ public class AdvancedNotificationService {
         List<NotificationMessage> messages = new ArrayList<>();
         messageQueue.drainTo(messages);
 
-        LOGGER.info(() -> String.format("Processing %d messages...", messages.size()));
+        LOGGER.info(String.format("⚡ Processing %d messages...", messages.size()));
 
-        // Group messages by priority using Stream API
         Map<Priority, List<NotificationMessage>> messagesByPriority = messages.stream()
-                .collect(Collectors.groupingBy(NotificationMessage::priority));
+                .collect(Collectors.groupingBy(NotificationMessage::getPriority));
 
-        // Process urgent messages first
         List<CompletableFuture<Void>> futures = messagesByPriority.entrySet().stream()
-                .sorted(Map.Entry.<Priority, List<NotificationMessage>>comparingByKey()
-                        .reversed()
-                        .thenComparing(e -> e.getKey().getLevel()))
+                .sorted((e1, e2) -> Integer.compare(e2.getKey().getLevel(), e1.getKey().getLevel()))
                 .flatMap(entry -> entry.getValue().stream())
                 .map(this::sendToAllChannels)
-                .toList();
+                .collect(Collectors.toList());
 
-        // Wait for all messages to be sent
-        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-                .join();
+        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
 
-        LOGGER.info("All messages processed.");
+        LOGGER.info("✓ All messages processed.");
         printStats();
     }
 
-    /**
-     * Send message to all available channels concurrently.
-     * Demonstrates: CompletableFuture composition, Exception handling
-     */
     private CompletableFuture<Void> sendToAllChannels(NotificationMessage message) {
         List<CompletableFuture<Boolean>> channelFutures = channels.stream()
                 .map(channel -> channel.send(message)
                         .thenApply(success -> {
-                            if (success) {
+                            if (success)
                                 updateStats(channel.getChannelName());
-                            }
                             return success;
                         })
                         .exceptionally(ex -> {
-                            LOGGER.log(Level.WARNING,
-                                    "Failed to send via " + channel.getChannelName(), ex);
+                            LOGGER.log(Level.WARNING, "Failed to send via " + channel.getChannelName(), ex);
                             return false;
                         }))
-                .toList();
+                .collect(Collectors.toList());
 
-        return CompletableFuture.allOf(
-                channelFutures.toArray(new CompletableFuture[0]));
+        return CompletableFuture.allOf(channelFutures.toArray(new CompletableFuture[0]));
     }
 
-    /**
-     * Update delivery statistics atomically.
-     * Demonstrates: ConcurrentHashMap atomic operations
-     */
     private void updateStats(String channelName) {
         deliveryStats.merge(channelName, 1, Integer::sum);
     }
 
-    /**
-     * Print delivery statistics.
-     * Demonstrates: Stream API for data processing
-     */
     private void printStats() {
         System.out.println("\n=== Delivery Statistics ===");
         deliveryStats.entrySet().stream()
                 .sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
-                .forEach(entry -> System.out.printf(
-                        "%s: %d messages%n",
-                        entry.getKey(),
-                        entry.getValue()));
+                .forEach(entry -> System.out.printf("  %s: %d messages%n", entry.getKey(), entry.getValue()));
     }
 
-    /**
-     * Graceful shutdown of the service.
-     * Demonstrates: Resource management, ExecutorService shutdown
-     */
     public void shutdown() {
         LOGGER.info("Shutting down notification service...");
         executorService.shutdown();
@@ -265,56 +222,40 @@ public class AdvancedNotificationService {
         }
     }
 
-    /**
-     * Factory method for creating service with default channels.
-     * Demonstrates: Factory pattern, Fluent API
-     */
     public static AdvancedNotificationService createDefault() {
-        return new AdvancedNotificationService(List.of(
+        return new AdvancedNotificationService(Arrays.asList(
                 new EmailChannel(),
                 new SmsChannel(),
                 new PushChannel()));
     }
 
-    /**
-     * Main method demonstrating the service usage.
-     */
     public static void main(String[] args) {
         System.out.println("=== Advanced Java Notification Service ===\n");
 
-        // Create service using factory method
         AdvancedNotificationService service = AdvancedNotificationService.createDefault();
 
         try {
-            // Create sample notifications with different priorities
-            List<NotificationMessage> sampleMessages = List.of(
+            List<NotificationMessage> sampleMessages = Arrays.asList(
                     new NotificationMessage(
-                            "admin@thepowerhouse.com",
+                            "youths.powerhouse@gmail.com",
                             "System Alert",
                             "Server load at 85%",
-                            Priority.URGENT,
-                            LocalDateTime.now()),
+                            Priority.URGENT),
                     new NotificationMessage(
                             "user@example.com",
                             "Reminder",
                             "Your choir rehearsal is starting soon",
-                            Priority.MEDIUM,
-                            LocalDateTime.now()),
+                            Priority.MEDIUM),
                     new NotificationMessage(
                             "member@church.com",
                             "Newsletter",
                             "Monthly newsletter is available",
-                            Priority.LOW,
-                            LocalDateTime.now()));
+                            Priority.LOW));
 
-            // Queue all messages
             sampleMessages.forEach(service::queueMessage);
-
-            // Process queue with concurrent execution
             service.processQueue();
 
         } finally {
-            // Ensure proper cleanup
             service.shutdown();
         }
 
